--- a/vpc_setup.yaml
+++ b/vpc_setup.yaml
@@ -13,5 +13,5 @@
         dns_support: yes
         dns_hostname: yes
         tenancy: default
-        state: :"{{state}}"
+        state: "{{state}}"
       register: vpcout
